# UNI_EVENT

./: .gitignore  LICENSE  Makefile  README.md  ReadmeOnce.md  WEB_BUNDLE_SCHEMA.md  pyproject.toml  rubric.md
labs/: package-lock.json  package.json  tsconfig.tsbuildinfo
labs/app/: globals.css  layout.tsx  page.tsx
labs/app/api/ask/: route.ts
labs/app/components/: AccumulationSection.tsx  ChapterRail.tsx  ClosingSection.tsx  FrameAccumulator.tsx  HeroCanvas.tsx  MorphScene.tsx  MorphSection.tsx  MountWhenNear.tsx  PipelineSection.tsx  Reveal.tsx  SensorDemo.tsx  SensorOpener.tsx  SmoothScroll.tsx  TutorSection.tsx
labs/app/health/: route.ts
labs/app/lib/: loadUniEvent.ts  palette.ts
labs/public/data/: stats.json  tutor.json
labs/public/data/frame/: manifest.json
labs/public/data/graph/: manifest.json
labs/public/data/spike/: manifest.json
labs/public/data/voxel/: manifest.json
scripts/: adapter_demo.py  clip_stats.py  grade.sh  make_bundles.py  make_sample.py  preview.py  reproduce.sh  validate_bundles.py
tests/: test_bundles.py  test_determinism.py  test_integrity.py  test_license_gate.py  test_represent.py
unievent/: __init__.py  cli.py  core.py  io.py  web.py
unievent/data/: sample_stream.npz
unievent/representations/: SPEC.md  __init__.py  base.py  frame.py  graph.py  spike.py  timesurface.py  voxel.py
